objects/Tech_Sales_Internal_Approval_Rule_Header__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Owner Director</fullName>
                </value>
                <value>
                    <fullName>Account Owner Manager</fullName>
                </value>
                <value>
                    <fullName>Account Owner Senior Director</fullName>
                </value>
                <value>
                    <fullName>Account Owner SVP</fullName>
                </value>
                <value>
                    <fullName>Account Owner VP</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Quote Owner Director</fullName>
                </value>
                <value>
                    <fullName>Quote Owner Manager</fullName>
                </value>
                <value>
                    <fullName>Quote Owner Senior Director</fullName>
                </value>
                <value>
                    <fullName>Quote Owner SVP</fullName>
                </value>
                <value>
                    <fullName>Quote Owner VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tech Sale</fullName>
                </value>
                <value>
                    <fullName>PROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Internal Approval Rule Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Rule_Name__c</columns>
        <columns>Approver__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Tech Sale</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Techsales_Rules</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <columns>Approver__c</columns>
        <columns>Project__c</columns>
        <columns>Rule_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>notEqual</operation>
            <value>Tech Sale,PROS</value>
        </filters>
        <label>Techsales Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Internal Approval Rule Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Approval Rule Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>